--- a/IDE for SIC ASM.csproj
+++ b/IDE for SIC ASM.csproj
@@ -61,6 +61,7 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MyErrorListener.cs" />
+    <Compile Include="MyParseListener.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SicGrammarBaseListener.cs" />
